# okular

./: CMakeLists.txt  config-okular.h.cmake
conf/: okular.kcfg
part/: dlgaccessibility.cpp  dlgaccessibility.h  openaitts.cpp  openaitts.h  pageview.cpp  part.qrc  part.rc  tts.cpp  tts.h
shell/: CMakeLists.txt  main.cpp
shell/mac/fontconfig/: fonts.conf
shell/mac/fontconfig/fonts/: Carlito.ttc  NOTICE.txt
